apps/base/couchdb/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: couchdb
  labels:
    http-ingress: "true"
