apps/base/couchdb/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: couchdb
  namespace: couchdb
  labels:
    app: couchdb
spec:
  type: ClusterIP
  selector:
    app: couchdb
  ports:
    - name: http
      port: 5984
      protocol: TCP
      targetPort: 5984
